query made to work for FilterCriteria